--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -77,3 +77,10 @@ body {
   text-decoration: none;
   font-weight: 400px;
 }
+
+.errorMessage {
+  color: red;
+  font-size: 12px;
+  font-weight: 400;
+  text-align: center;
+}
