--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -75,7 +75,7 @@ body {
 .signInMessage {
   font-size: 14px;
   text-decoration: none;
-  font-weight: 400px;
+  font-weight: 400;
 }
 
 .errorMessage {
